tests/NormalTests/paczka1/small_fuzzy/60251625.err
Error in line 4: mjmk64u8br9 A612 76,4
Error in line 7: FEtA20g7L A195 44,8
Error in line 8: mjmk64u8br9 A334 18,6
